--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,10 @@ article {display: inline-block; width:33%; height:150px; margin-right:0px; backg
 .arrow {position:absolute; bottom:15px; right:10px; transition:all 0.5s;}
 .arrow-state2 {transform:rotate(180deg);}
 article ul {list-style-type:none; margin-top:10px;}
-article li {background:white; border-top:0.5px solid rgba(154,154,154,0.71); padding:10px; font-size:0.9em}
+article li {background:white; border-top:0.5px solid rgba(154,154,154,0.71); padding:10px; font-size:0.9em; 
+        position: relative;
+    z-index: 9999;
+}
 article li a {text-decoration: none;color:black;}
 .article-inside-image {
     text-align: center;
